--- a/index.html
+++ b/index.html
@@ -5,6 +5,43 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Fuji</title>
     <link rel="stylesheet" href="style.css" />
+    <!-- Yandex.Metrika counter -->
+    <script type="text/javascript">
+      (function (m, e, t, r, i, k, a) {
+        m[i] =
+          m[i] ||
+          function () {
+            (m[i].a = m[i].a || []).push(arguments);
+          };
+        m[i].l = 1 * new Date();
+        (k = e.createElement(t)),
+          (a = e.getElementsByTagName(t)[0]),
+          (k.async = 1),
+          (k.src = r),
+          a.parentNode.insertBefore(k, a);
+      })(
+        window,
+        document,
+        "script",
+        "https://mc.yandex.ru/metrika/tag.js",
+        "ym"
+      );
+
+      ym(87188710, "init", {
+        clickmap: true,
+        trackLinks: true,
+        accurateTrackBounce: true,
+      });
+    </script>
+    <noscript
+      ><div>
+        <img
+          src="https://mc.yandex.ru/watch/87188710"
+          style="position: absolute; left: -9999px"
+          alt=""
+        /></div
+    ></noscript>
+    <!-- /Yandex.Metrika counter -->
   </head>
 
   <body>
@@ -153,7 +190,7 @@
                 alt="img"
               />
               <div class="block-card-text block-long-card-text">
-                <br>
+                <br />
                 <p>Сделаем фото <br />вашего формата</p>
               </div>
             </div>
@@ -200,7 +237,7 @@
               сохранять все самые важные моменты вашей жизни на настоящей
               фотографии, а мы вам в этом поможем!
             </p>
-          </div> 
+          </div>
           <p class="block-content-text">Форматы и цены:</p>
           <div class="block-cards">
             <div class="block-card">
@@ -423,7 +460,11 @@
           </p>
           <div class="road">
             <div class="block-card contacts-card">
-              <img class="block-card-img" src="source/img/contacts/step1.png" alt="img" />
+              <img
+                class="block-card-img"
+                src="source/img/contacts/step1.png"
+                alt="img"
+              />
               <p class="block-card-text">1. Заходим</p>
             </div>
             <div class="block-card contacts-card">
@@ -432,26 +473,46 @@
                 - налево
               </p>
 
-              <img class="block-card-img" src="source/img/contacts/step2.png" alt="img" />
+              <img
+                class="block-card-img"
+                src="source/img/contacts/step2.png"
+                alt="img"
+              />
             </div>
             <div class="block-card contacts-card">
               <p class="block-card-text">3. Поднимаемся <br />по лестнице</p>
 
-              <img class="block-card-img" src="source/img/contacts/step3.png" alt="img" />
+              <img
+                class="block-card-img"
+                src="source/img/contacts/step3.png"
+                alt="img"
+              />
             </div>
             <div class="block-card contacts-card">
               <p class="block-card-text">
                 4. Поднявшись, направо <br />и сразу налево
               </p>
-              <img class="block-card-img" src="source/img/contacts/step4.png" alt="img" />
+              <img
+                class="block-card-img"
+                src="source/img/contacts/step4.png"
+                alt="img"
+              />
             </div>
             <div class="block-card contacts-card">
               <p class="block-card-text">5. Проходим коридор</p>
-              <img class="block-card-img" src="source/img/contacts/step5.png" alt="img" />
+              <img
+                class="block-card-img"
+                src="source/img/contacts/step5.png"
+                alt="img"
+              />
             </div>
             <div class="block-card contacts-card">
               <p class="block-card-text">6. Ура! Мы пришли!</p>
-              <img class="block-card-img" src="source/img/contacts/step6.png" alt="img" />
+              <img
+                class="block-card-img"
+                src="source/img/contacts/step6.png"
+                alt="img"
+              />
             </div>
           </div>
         </div>
