--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
           class="burger-img"
           id="burger-img"
           src="source/img/header/burger.svg"
-          alt="img"
+          alt="меню фотоуслуг"
         />
         <div class="burger" id="burger">
           <nav class="burger-menu close-burger-menu">
@@ -79,7 +79,7 @@
           <img
             class="close-burger-menu burger-cross"
             src="source/img/header/cross.svg"
-            alt="img"
+            alt="фото в брянске"
           />
         </div>
         <div class="logo">
@@ -98,12 +98,12 @@
             <img
               class="about-us-planshet"
               src="source/img/about-us/about-us-planshet.png"
-              alt=""
+              alt="фото брянска"
             />
             <img
               class="about-us-mobile"
               src="source/img/about-us/about-us-mobile.png"
-              alt=""
+              alt="фото брянска"
             />
             <p class="about-us-content-main-text2">
               Мы работаем уже более 20 лет и знаем своё дело. Приходите к нам —
@@ -116,7 +116,7 @@
           <img
             class="about-us-img"
             src="source/img/about-us/about-us.png"
-            alt="img"
+            alt="фото брянска"
           />
         </div>
       </section>
@@ -131,7 +131,7 @@
               <img
                 class="block-card-img block-long-card-img"
                 src="source/img/photo-for-documents/pasport-rf.png"
-                alt="img"
+                alt="фото на паспорт"
               />
               <div class="block-card-text block-long-card-text">
                 <br />
@@ -143,7 +143,7 @@
               <img
                 class="block-card-img block-long-card-img"
                 src="source/img/photo-for-documents/zagran.png"
-                alt="img"
+                alt="фото на загранпаспорт"
               />
               <div class="block-card-text block-long-card-text">
                 <h3>Загранпаспорт</h3>
@@ -158,7 +158,7 @@
               <img
                 class="block-card-img block-long-card-img"
                 src="source/img/photo-for-documents/three-four.png"
-                alt="img"
+                alt="фото 3 на 4"
               />
               <div class="block-card-text block-long-card-text">
                 <h3>Фото 3x4</h3>
@@ -172,7 +172,7 @@
               <img
                 class="block-card-img block-long-card-img"
                 src="source/img/photo-for-documents/four-six.png"
-                alt="img"
+                alt="фото 4 на 6"
               />
               <div class="block-card-text block-long-card-text">
                 <h3>Фото 4x6</h3>
@@ -187,7 +187,7 @@
               <img
                 class="block-card-img block-long-card-img"
                 src="source/img/photo-for-documents/unknown.png"
-                alt="img"
+                alt="свой формат фото"
               />
               <div class="block-card-text block-long-card-text">
                 <br />
@@ -205,7 +205,7 @@
               <img
                 class="print-content-bottom-card-img"
                 src="source/img/print/print-machine-photo-born.png"
-                alt="img"
+                alt="мокрая печать фотографий"
               />
               <div class="print-content-bottom-card-text">
                 <p>Рождение фотографии...</p>
@@ -226,7 +226,7 @@
               <img
                 class="block-card-img"
                 src="source/img/print/10x15.png"
-                alt="img"
+                alt="фото 10 на 15"
               />
               <p class="block-card-text">10x15<br />18 руб</p>
             </div>
@@ -234,7 +234,7 @@
               <img
                 class="block-card-img"
                 src="source/img/print/15x21.png"
-                alt="img"
+                alt="фото 15 на 21"
               />
               <p class="block-card-text">15x21<br />35 руб</p>
             </div>
@@ -242,7 +242,7 @@
               <img
                 class="block-card-img"
                 src="source/img/print/21x30.png"
-                alt="img"
+                alt="фото 21 на 30"
               />
               <p class="block-card-text">21x30<br />70 руб</p>
             </div>
@@ -250,7 +250,7 @@
               <img
                 class="block-card-img"
                 src="source/img/print/30x40.png"
-                alt="img"
+                alt="фото 30 на 40"
               />
               <p class="block-card-text">30x40<br />180 руб</p>
             </div>
@@ -258,7 +258,7 @@
               <img
                 class="block-card-img"
                 src="source/img/print/30x45.png"
-                alt="img"
+                alt="фото 30 на 45"
               />
               <p class="block-card-text">30x45<br />200 руб</p>
             </div>
@@ -266,7 +266,7 @@
               <img
                 class="block-card-img"
                 src="source/img/print/film.png"
-                alt="img"
+                alt="проявка пленки"
               />
               <p class="block-card-text">Проявка плёнки<br />260 руб</p>
             </div>
@@ -285,21 +285,21 @@
               <img
                 class="block-card-img recovery-card-img"
                 src="source/img/recovery/soldier1.png"
-                alt=""
+                alt="восстановление фотографий"
               />
             </div>
             <div class="block-card recovery-card">
               <img
                 class="block-card-img recovery-card-img"
                 src="source/img/recovery/child.png"
-                alt=""
+                alt="реставрация фото"
               />
             </div>
             <div class="block-card recovery-card">
               <img
                 class="block-card-img recovery-card-img"
                 src="source/img/recovery/soldier2.png"
-                alt=""
+                alt="старые фото"
               />
             </div>
           </div>
@@ -314,7 +314,7 @@
               <img
                 class="block-card-img"
                 src="source/img/polirgaphy/cap.png"
-                alt=""
+                alt="печать на кружках"
               />
               <p class="block-card-text">Печать на кружках</p>
             </div>
@@ -322,7 +322,7 @@
               <img
                 class="block-card-img"
                 src="source/img/polirgaphy/wood.png"
-                alt=""
+                alt="печать на дереве"
               />
               <p class="block-card-text">Печать на дереве</p>
             </div>
@@ -330,7 +330,7 @@
               <img
                 class="block-card-img"
                 src="source/img/polirgaphy/short.png"
-                alt=""
+                alt="печать на футболках"
               />
               <p class="block-card-text">Печать на футболках</p>
             </div>
@@ -348,7 +348,7 @@
               <img
                 class="block-card-img"
                 src="source/img/accessories/alboms.png"
-                alt=""
+                alt="альбомы"
               />
               <p class="block-card-text">Альбомы</p>
             </div>
@@ -356,7 +356,7 @@
               <img
                 class="block-card-img"
                 src="source/img/accessories/battaries.png"
-                alt=""
+                alt="батарейки"
               />
               <p class="block-card-text">Батарейки</p>
             </div>
@@ -364,7 +364,7 @@
               <img
                 class="block-card-img"
                 src="source/img/accessories/photoframe.png"
-                alt=""
+                alt="фоторамки"
               />
               <p class="block-card-text">Фоторамки</p>
             </div>
@@ -380,7 +380,7 @@
                 <img
                   class="contacts-img"
                   src="source/img/contacts/phone.svg"
-                  alt=""
+                  alt="телефон фотосалона"
                 />
                 <span class="contacts-text">+7 (4832) 66-39-98</span>
               </div>
@@ -388,7 +388,7 @@
                 <img
                   class="contacts-img"
                   src="source/img/contacts/mail.svg"
-                  alt=""
+                  alt="электронная почта фотосалона"
                 />
                 <span class="contacts-text">fuji32@bk.ru</span>
               </div>
@@ -396,7 +396,7 @@
                 <img
                   class="contacts-img"
                   src="source/img/contacts/address.png"
-                  alt=""
+                  alt="фотосалон на карте"
                 />
                 <span class="contacts-text"
                   >г.Брянск пр.Ленина 67, Центральны Дом Быта, 2 этаж</span
@@ -445,7 +445,7 @@
               <img
                 class="block-card-img"
                 src="source/img/contacts/step1.png"
-                alt="img"
+                alt="фотосалон находится в доме быта"
               />
               <p class="block-card-text">1. Заходим</p>
             </div>
@@ -458,7 +458,7 @@
               <img
                 class="block-card-img"
                 src="source/img/contacts/step2.png"
-                alt="img"
+                alt="идем к фотосалону"
               />
             </div>
             <div class="block-card contacts-card">
@@ -467,7 +467,7 @@
               <img
                 class="block-card-img"
                 src="source/img/contacts/step3.png"
-                alt="img"
+                alt="поднимаемся к фотосалону"
               />
             </div>
             <div class="block-card contacts-card">
@@ -477,7 +477,7 @@
               <img
                 class="block-card-img"
                 src="source/img/contacts/step4.png"
-                alt="img"
+                alt="поворачиваем к фотосалону"
               />
             </div>
             <div class="block-card contacts-card">
@@ -485,7 +485,7 @@
               <img
                 class="block-card-img"
                 src="source/img/contacts/step5.png"
-                alt="img"
+                alt="проходим коридор до фотосалона"
               />
             </div>
             <div class="block-card contacts-card">
@@ -493,7 +493,7 @@
               <img
                 class="block-card-img"
                 src="source/img/contacts/step6.png"
-                alt="img"
+                alt="пришли в фотосалон"
               />
             </div>
           </div>
