--- a/index.html
+++ b/index.html
@@ -502,11 +502,58 @@
         </div>
       </section>
       <div class="popup">
-        <nav id="popup-menu-online" class="popup-menu-online">
-          <p class="popup-menu-online-p">Печать фото</p>
-          <p class="popup-menu-online-p">Печать на кружке</p>
-          <p class="popup-menu-online-p">Печать на дереве</p>
+        <nav id="popup-menu" class="popup-menu">
+          <p id="print-order-menu" class="popup-menu-p">Печать фото</p>
+          <p class="popup-menu-p">Печать на кружке</p>
+          <p class="popup-menu-p">Печать на дереве</p>
         </nav>
+        <div id="print-order" class="print-order">
+          <form action="#" id="form" class="form-body">
+            <h1 class="form-title">Оформление заказа</h1>
+            <div class="form-item">
+              <label for="form-name">Имя*:</label>
+              <input
+                type="text"
+                id="form-name"
+                name="name"
+                class="form-input"
+              />
+            </div>
+            <div class="form-item">
+              <label for="form-email">Почта:</label>
+              <input
+                type="text"
+                id="form-email"
+                name="email"
+                class="form-input"
+              />
+            </div>
+            <div class="form-item">
+              <label for="form-cellphone">Телефон:</label>
+              <input
+                type="text"
+                id="form-cellphone"
+                name="cellphone"
+                class="form-input"
+              />
+            </div>
+            <div class="form-item">
+              <div class="form-label">Прикрепить фото</div>
+              <div class="file">
+                <div class="file-item">
+                  <input
+                    id="form-image"
+                    accept=".jpg, .png"
+                    type="file"
+                    name="image"
+                  />
+                  <div class="file-button">Выбрать</div>
+                </div>
+              </div>
+            </div>
+            <button type="submit" class="form-button">Отправить</button>
+          </form>
+        </div>
         <!-- <div class="popup-content">Text in Popup</div> -->
       </div>
       <footer>
