--- a/pechat-foto.html
+++ b/pechat-foto.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Фотоуслуги в Брянске</title>
+    <title>Печать фото в Брянске</title>
     <link rel="stylesheet" href="style.css" />
     <!-- Yandex.Metrika counter -->
     <script type="text/javascript">
@@ -49,7 +49,7 @@
       <div class="header-content">
         <nav class="menu">
           <div>
-            <a href="/foto-na-dokumenty.html">Фото на документы</a>
+            <a href="#photo-for-documents">Фото на документы</a>
             <a href="#polygraphy">Полиграфия</a>
           </div>
           <div>
@@ -69,7 +69,7 @@
         />
         <div class="burger" id="burger">
           <nav class="burger-menu close-burger-menu">
-            <a href="/foto-na-dokumenty.html">Фото на документы</a>
+            <a href="#photo-for-documents">Фото на документы</a>
             <a href="#polygraphy">Полиграфия</a>
             <a href="#print">Печать фото и проявка плёнки</a>
             <a href="#accessories">Аксессуары</a>
@@ -89,37 +89,6 @@
       </div>
     </header>
     <main class="close-burger-menu">
-      <section class="about-us">
-        <div class="about-us-content">
-          <div class="about-us-content-main">
-            <h2 class="about-us-content-main-text1">
-              Весь спектр фотоуслуг в одном магазине
-            </h2>
-            <img
-              class="about-us-planshet"
-              src="source/img/about-us/about-us-planshet.png"
-              alt="фото брянска"
-            />
-            <img
-              class="about-us-mobile"
-              src="source/img/about-us/about-us-mobile.png"
-              alt="фото брянска"
-            />
-            <p class="about-us-content-main-text2">
-              Мы работаем уже более 20 лет и знаем своё дело. Приходите к нам —
-              мы сфотографируем вас на документы, проявим фото на настоящей
-              фотобумаге, нанесём изображение на дерево, оцифруем старые
-              видеокассеты, и это ещё не всё!
-            </p>
-            <a href="#photo-for-documents" class="services-view">Обзор услуг</a>
-          </div>
-          <img
-            class="about-us-img"
-            src="source/img/about-us/about-us.png"
-            alt="фото брянска"
-          />
-        </div>
-      </section>
       <section class="block print" id="print">
         <div class="block-content">
           <h2 class="block-content-title">Печать и проявка плёнки</h2>
@@ -196,104 +165,6 @@
           </div>
         </div>
       </section>
-      <section class="block recovery" id="recovery">
-        <div class="block-content">
-          <h3 class="block-content-title">Восстановление и оцифровка</h3>
-          <p class="block-content-text">
-            Принимаем заказы на восстановление старых фото и оцифрку
-            видеокассет.
-          </p>
-          <div class="block-cards">
-            <div class="block-card recovery-card">
-              <img
-                class="block-card-img recovery-card-img"
-                src="source/img/recovery/soldier1.png"
-                alt="восстановление фотографий"
-              />
-            </div>
-            <div class="block-card recovery-card">
-              <img
-                class="block-card-img recovery-card-img"
-                src="source/img/recovery/child.png"
-                alt="реставрация фото"
-              />
-            </div>
-            <div class="block-card recovery-card">
-              <img
-                class="block-card-img recovery-card-img"
-                src="source/img/recovery/soldier2.png"
-                alt="старые фото"
-              />
-            </div>
-          </div>
-        </div>
-      </section>
-      <section class="block polygraphy" id="polygraphy">
-        <div class="block-content">
-          <h3 class="block-content-title">Полиграфия</h3>
-          <p class="block-content-text">Печатаем не только на бумаге...</p>
-          <div class="block-cards">
-            <div class="block-card">
-              <img
-                class="block-card-img"
-                src="source/img/polirgaphy/cap.png"
-                alt="печать на кружках"
-              />
-              <p class="block-card-text">Печать на кружках</p>
-            </div>
-            <div class="block-card">
-              <img
-                class="block-card-img"
-                src="source/img/polirgaphy/wood.png"
-                alt="печать на дереве"
-              />
-              <p class="block-card-text">Печать на дереве</p>
-            </div>
-            <div class="block-card">
-              <img
-                class="block-card-img"
-                src="source/img/polirgaphy/short.png"
-                alt="печать на футболках"
-              />
-              <p class="block-card-text">Печать на футболках</p>
-            </div>
-          </div>
-        </div>
-      </section>
-      <section class="block accessories" id="accessories">
-        <div class="block-content">
-          <h3 class="block-content-title">Аксессуары</h3>
-          <p class="block-content-text">
-            Вы также можете приобрести у нас множество товаров в сфере фото:
-          </p>
-          <div class="block-cards">
-            <div class="block-card">
-              <img
-                class="block-card-img"
-                src="source/img/accessories/alboms.png"
-                alt="альбомы"
-              />
-              <p class="block-card-text">Альбомы</p>
-            </div>
-            <div class="block-card">
-              <img
-                class="block-card-img"
-                src="source/img/accessories/battaries.png"
-                alt="батарейки"
-              />
-              <p class="block-card-text">Батарейки</p>
-            </div>
-            <div class="block-card">
-              <img
-                class="block-card-img"
-                src="source/img/accessories/photoframe.png"
-                alt="фоторамки"
-              />
-              <p class="block-card-text">Фоторамки</p>
-            </div>
-          </div>
-        </div>
-      </section>
       <section class="block contacts" id="contacts">
         <div class="block-content">
           <h3 class="block-content-title">Контакты</h3>
@@ -305,7 +176,7 @@
                   src="source/img/contacts/phone.svg"
                   alt="телефон фотосалона"
                 />
-                <span  class="contacts-text">+7 (4832) 66-39-98</span>
+                <span class="contacts-text">+7 (4832) 66-39-98</span>
               </div>
               <div class="contacts-row">
                 <img
