Раздел печать фото

--- a/pechat-foto.html
+++ b/pechat-foto.html
@@ -1,10 +1,13 @@
+
 <!DOCTYPE html>
 <html lang="ru">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Печать фото в Брянске</title>
+    <meta name="description" content="Фотопечать в Брянске: распечатать картинки, цветная печать недорого">
+    <title>Фото на документы в Брянске</title>
     <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="/source/pechat-foto/style.css" />
     <!-- Yandex.Metrika counter -->
     <script type="text/javascript">
       (function (m, e, t, r, i, k, a) {
@@ -53,11 +56,15 @@
             <a href="#polygraphy">Полиграфия</a>
           </div>
           <div>
-            <a href="#print">Печать фото и проявка плёнки</a>
+            <a href="#print">Печать фото</a>
             <a href="#accessories">Аксессуары</a>
           </div>
           <div>
-            <a href="#recovery">Восстановление и оцифровка</a>
+            <a href="#recovery">Восстановление фото</a>
+            <a href="#contacts">Проявка плёнки</a>
+          </div>
+          <div>
+            <a href="#recovery">Оцифровка видеокассет</a>
             <a href="#contacts">Контакты</a>
           </div>
         </nav>
@@ -71,9 +78,11 @@
           <nav class="burger-menu close-burger-menu">
             <a href="#photo-for-documents">Фото на документы</a>
             <a href="#polygraphy">Полиграфия</a>
-            <a href="#print">Печать фото и проявка плёнки</a>
+            <a href="#print">Печать фото</a>
+            <a href="#print">Проявка плёнки</a>
             <a href="#accessories">Аксессуары</a>
-            <a href="#recovery">Восстановление и оцифровка</a>
+            <a href="#recovery">Восстановление фото</a>
+            <a href="#recovery">Оцифровка</a>
             <a href="#contacts">Контакты</a>
           </nav>
           <img
@@ -91,12 +100,12 @@
     <main class="close-burger-menu">
       <section class="block print" id="print">
         <div class="block-content">
-          <h2 class="block-content-title">Печать и проявка плёнки</h2>
-          <div class="print-content-bottom">
+          <h2 class="block-content-title">Печать фото</h2>
+          <div class="print-content">
             <div class="print-content-bottom-card">
               <img
                 class="print-content-bottom-card-img"
-                src="source/img/print/print-machine-photo-born.png"
+                src="source/pechat-foto/img/print-machine-photo-born.png"
                 alt="мокрая печать фотографий"
               />
               <div class="print-content-bottom-card-text">
@@ -104,20 +113,20 @@
               </div>
             </div>
             <p class="print-content-bottom-text">
-              Мы печатаем фото в специальной фотолаболатории с помощью японского
-              обородувания компании <span>Fujifilm</span>. Краска сочная и не
-              выгорает. То что нужно, чтобы сохранить память надолго, ведь живое
-              фото надежнее цифрового носителя. Не забывайте время от времени
-              сохранять все самые важные моменты вашей жизни на настоящей
-              фотографии, а мы вам в этом поможем!
+              Ищите где распечатать фото? Обращайтесь к нам! Мы печатаем 
+              в специальной фотолаборатории с помощью японского
+              обородувания компании <span>Fujifilm</span>. Цветная печать осуществляется
+              путём проявки изображения на специальной фотобумаге. Данная технология обеспечивает 
+              долговечность фотографии и стойкость красок.
             </p>
+
           </div>
           <p class="block-content-text">Форматы и цены:</p>
           <div class="block-cards">
             <div class="block-card">
               <img
                 class="block-card-img"
-                src="source/img/print/10x15.png"
+                src="source/pechat-foto/img/10x15.png"
                 alt="фото 10 на 15"
               />
               <p class="block-card-text">10x15<br />18 руб</p>
@@ -125,7 +134,7 @@
             <div class="block-card">
               <img
                 class="block-card-img"
-                src="source/img/print/15x21.png"
+                src="source/pechat-foto/img/15x21.png"
                 alt="фото 15 на 21"
               />
               <p class="block-card-text">15x21<br />35 руб</p>
@@ -133,7 +142,7 @@
             <div class="block-card">
               <img
                 class="block-card-img"
-                src="source/img/print/21x30.png"
+                src="source/pechat-foto/img/21x30.png"
                 alt="фото 21 на 30"
               />
               <p class="block-card-text">21x30<br />70 руб</p>
@@ -141,7 +150,7 @@
             <div class="block-card">
               <img
                 class="block-card-img"
-                src="source/img/print/30x40.png"
+                src="source/pechat-foto/img/30x40.png"
                 alt="фото 30 на 40"
               />
               <p class="block-card-text">30x40<br />180 руб</p>
@@ -149,146 +158,10 @@
             <div class="block-card">
               <img
                 class="block-card-img"
-                src="source/img/print/30x45.png"
+                src="source/pechat-foto/img/30x45.png"
                 alt="фото 30 на 45"
               />
               <p class="block-card-text">30x45<br />200 руб</p>
-            </div>
-            <div class="block-card">
-              <img
-                class="block-card-img"
-                src="source/img/print/film.png"
-                alt="проявка пленки"
-              />
-              <p class="block-card-text">Проявка плёнки<br />260 руб</p>
-            </div>
-          </div>
-        </div>
-      </section>
-      <section class="block contacts" id="contacts">
-        <div class="block-content">
-          <h3 class="block-content-title">Контакты</h3>
-          <div class="block-content-text">
-            <div class="contacts-rows">
-              <div class="contacts-row">
-                <img
-                  class="contacts-img"
-                  src="source/img/contacts/phone.svg"
-                  alt="телефон фотосалона"
-                />
-                <span class="contacts-text">+7 (4832) 66-39-98</span>
-              </div>
-              <div class="contacts-row">
-                <img
-                  class="contacts-img"
-                  src="source/img/contacts/mail.svg"
-                  alt="электронная почта фотосалона"
-                />
-                <span class="contacts-text">fuji32@bk.ru</span>
-              </div>
-              <div class="contacts-row">
-                <img
-                  class="contacts-img"
-                  src="source/img/contacts/address.png"
-                  alt="фотосалон на карте"
-                />
-                <span class="contacts-text"
-                  >г.Брянск пр.Ленина 67, Центральны Дом Быта, 2 этаж</span
-                >
-              </div>
-            </div>
-          </div>
-          <div class="map" style="position: relative; overflow: hidden">
-            <!-- <a href="https://yandex.ru/maps/org/tsentralny_dom_byta/1025111412/?utm_medium=mapframe&utm_source=maps" 
-                  style="color:#eee;font-size:12px;position:absolute;top:0px;">Центральный дом быта</a> -->
-            <a
-              href="https://yandex.ru/maps/191/bryansk/category/shopping_mall/184108083/?utm_medium=mapframe&utm_source=maps"
-              style="
-                color: #eee;
-                font-size: 12px;
-                position: absolute;
-                top: 14px;
-              "
-              >Торговый центр в Брянске</a
-            >
-            <a
-              href="https://yandex.ru/maps/191/bryansk/category/sale_and_lease_of_commercial_real_estate/184107521/?utm_medium=mapframe&utm_source=maps"
-              style="
-                color: #eee;
-                font-size: 12px;
-                position: absolute;
-                top: 28px;
-              "
-              >Продажа и аренда коммерческой недвижимости в Брянске</a
-            >
-            <iframe
-              src="https://yandex.ru/map-widget/v1/-/CCUqyGFBwC"
-              width="100%"
-              height="380"
-              frameborder="1"
-              allowfullscreen="true"
-              style="position: relative"
-            >
-            </iframe>
-          </div>
-          <p class="contacts-text">
-            Дом быта большой... Как найти наш магазин? Держите гайд:
-          </p>
-          <div class="road">
-            <div class="block-card contacts-card">
-              <img
-                class="block-card-img"
-                src="source/img/contacts/step1.png"
-                alt="фотосалон находится в доме быта"
-              />
-              <p class="block-card-text">1. Заходим</p>
-            </div>
-            <div class="block-card contacts-card">
-              <p class="block-card-text">
-                2. Перед Спортландией <br />
-                - налево
-              </p>
-
-              <img
-                class="block-card-img"
-                src="source/img/contacts/step2.png"
-                alt="идем к фотосалону"
-              />
-            </div>
-            <div class="block-card contacts-card">
-              <p class="block-card-text">3. Поднимаемся <br />по лестнице</p>
-
-              <img
-                class="block-card-img"
-                src="source/img/contacts/step3.png"
-                alt="поднимаемся к фотосалону"
-              />
-            </div>
-            <div class="block-card contacts-card">
-              <p class="block-card-text">
-                4. Поднявшись, направо <br />и сразу налево
-              </p>
-              <img
-                class="block-card-img"
-                src="source/img/contacts/step4.png"
-                alt="поворачиваем к фотосалону"
-              />
-            </div>
-            <div class="block-card contacts-card">
-              <p class="block-card-text">5. Проходим коридор</p>
-              <img
-                class="block-card-img"
-                src="source/img/contacts/step5.png"
-                alt="проходим коридор до фотосалона"
-              />
-            </div>
-            <div class="block-card contacts-card">
-              <p class="block-card-text">6. Ура! Мы пришли!</p>
-              <img
-                class="block-card-img"
-                src="source/img/contacts/step6.png"
-                alt="пришли в фотосалон"
-              />
             </div>
           </div>
         </div>
