--- a/aksessuary.html
+++ b/aksessuary.html
@@ -3,10 +3,10 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="description" content="Предлагаем полиграфические услуги: фотокерамика, печатать на различных поверхностях, включая дерево, ткань одежды">
+    <meta name="description" content="Приобретайте у нас: рамки для фото, фотоальбомы, штативы, аккумуляторы, батарейки, фотокниги и проч.">
     <title>Фото на документы в Брянске</title>
     <link rel="stylesheet" href="style.css" />
-    <link rel="stylesheet" href="/source/poligrafiya/style.css" />
+    <link rel="stylesheet" href="/source/aksessuary/style.css" />
     <!-- Yandex.Metrika counter -->
     <script type="text/javascript">
       (function (m, e, t, r, i, k, a) {
@@ -97,38 +97,37 @@
       </div>
     </header>
     <main class="close-burger-menu">
-        <section class="block polygraphy" id="polygraphy">
+        <section class="block accessories" id="accessories">
             <div class="block-content">
-              <h3 class="block-content-title">Полиграфия</h3>
-              <p class="polygraphy-content-text">
-                  Если вам нужна полиграфическая продукция, смело обращайтесь в Фотосалон Фуджи!
-                  По вашему заказу сделаем печать фото на кружке, принт на футболку,
-                  распечатаем изображение на дереве, а также нанесём ритуальное фото на керамику.  
-                </p>
+              <h3 class="block-content-title">Аксессуары</h3>
+              <p class="accessories-text">
+                Если вам нужен магазин, в котором есть всё для фото, - вам нужен Фотосалон Фуджи! Купить штатив, подобрать фоторамку,
+                приобрести батарейки или аккумуляторы, выбрать альбом или фотокнигу - всё это можно осуществить здесь! 
+              </p>
               <div class="block-cards">
                 <div class="block-card">
                   <img
                     class="block-card-img"
-                    src="source/img/polirgaphy/cap.png"
-                    alt="печать на кружках"
+                    src="source/img/accessories/alboms.png"
+                    alt="альбомы"
                   />
-                  <p class="block-card-text">Печать на кружках</p>
+                  <p class="block-card-text">Фотоальбомы</p>
                 </div>
                 <div class="block-card">
                   <img
                     class="block-card-img"
-                    src="source/img/polirgaphy/wood.png"
-                    alt="печать на дереве"
+                    src="source/img/accessories/battaries.png"
+                    alt="батарейки"
                   />
-                  <p class="block-card-text">Печать на дереве</p>
+                  <p class="block-card-text">Батарейки</p>
                 </div>
                 <div class="block-card">
                   <img
                     class="block-card-img"
-                    src="source/img/polirgaphy/short.png"
-                    alt="печать на футболках"
+                    src="source/img/accessories/photoframe.png"
+                    alt="фоторамки"
                   />
-                  <p class="block-card-text">Печать на футболках</p>
+                  <p class="block-card-text">Фоторамки</p>
                 </div>
               </div>
             </div>
