--- a/aksessuary.html
+++ b/aksessuary.html
@@ -101,8 +101,8 @@
             <div class="block-content">
               <h3 class="block-content-title">Аксессуары</h3>
               <p class="accessories-text">
-                Если вам нужен магазин, в котором есть всё для фото, - вам нужен Фотосалон Фуджи! Купить штатив, подобрать фоторамку,
-                приобрести батарейки или аккумуляторы, выбрать альбом или фотокнигу - всё это можно осуществить здесь! 
+                 Обращайтесь к нам за любыми товарами в сфере фото! Купить штатив, подобрать фоторамку,
+                приобрести батарейки или аккумуляторы, выбрать альбом или фотокнигу - всё это можно осуществить у нас!
               </p>
               <div class="block-cards">
                 <div class="block-card">
