--- a/ocifrovka-videokasset.html
+++ b/ocifrovka-videokasset.html
@@ -109,7 +109,7 @@
             мы удалим шумы и восстановим цветовой баланс! 
           </p>
           <p class="digitization-content-text">
-            Также доступна услуга оцифровка киноплёнки - приносите записи длиной от 10 минут.
+            Также доступна оцифровка киноплёнки - приносите записи длиной от 10 минут.
           </p>
           <div class="block-cards">
             <div class="block-card">
