--- a/foto-na-dokumenty.html
+++ b/foto-na-dokumenty.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="description" content="Сделать срочное фото на документы, на паспорт, на загранпаспорт в Брянске">
     <title>Фото на документы в Брянске</title>
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="common-style.css" />
     <link rel="stylesheet" href="/source/foto-na-dokumenty/style.css" />
     <!-- Yandex.Metrika counter -->
     <script type="text/javascript">
@@ -52,19 +52,19 @@
         <nav class="menu">
           <div>
             <a href="#photo-for-documents">Фото на документы</a>
-            <a href="#polygraphy">Полиграфия</a>
+            <a href="poligrafiya.html">Полиграфия</a>
           </div>
           <div>
-            <a href="#print">Печать фото</a>
-            <a href="#accessories">Аксессуары</a>
+            <a href="pechat-foto.html">Печать фото</a>
+            <a href="aksessuary.html">Аксессуары</a>
           </div>
           <div>
-            <a href="#recovery">Восстановление фото</a>
-            <a href="#contacts">Проявка плёнки</a>
+            <a href="vosstanovlenie-foto.html">Восстановление фото</a>
+            <a href="proyavka-plyonki.html">Проявка плёнки</a>
           </div>
           <div>
-            <a href="#recovery">Оцифровка видеокассет</a>
-            <a href="#contacts">Контакты</a>
+            <a href="ocifrovka-videokasset.html">Оцифровка</a>
+            <a href="index.html#contacts">Контакты</a>
           </div>
         </nav>
         <img
@@ -76,13 +76,13 @@
         <div class="burger" id="burger">
           <nav class="burger-menu close-burger-menu">
             <a href="#photo-for-documents">Фото на документы</a>
-            <a href="#polygraphy">Полиграфия</a>
-            <a href="#print">Печать фото</a>
-            <a href="#print">Проявка плёнки</a>
-            <a href="#accessories">Аксессуары</a>
-            <a href="#recovery">Восстановление фото</a>
-            <a href="#recovery">Оцифровка</a>
-            <a href="#contacts">Контакты</a>
+            <a href="poligrafiya.html">Полиграфия</a>
+            <a href="pechat-foto.html">Печать фото</a>
+            <a href="proyavka-plyonki.html">Проявка плёнки</a>
+            <a href="aksessuary.html">Аксессуары</a>
+            <a href="vosstanovlenie-foto.html">Восстановление фото</a>
+            <a href="ocifrovka-videokasset.html">Оцифровка</a>
+            <a href="index.html#contacts">Контакты</a>
           </nav>
           <img
             class="close-burger-menu burger-cross"
@@ -90,8 +90,14 @@
             alt="фото в брянске"
           />
         </div>
+        <div class="schedule">
+          <p>пн - пт: 09:00 - 19:00</p>
+          <p>сб: 10:00 - 18:00</p>
+          <p>вс: 12:00 - 18:00</p>
+        </div>
+        <a class="phone" href="tel:+74832663998">+7 (4832) 66-39-98</a>
         <div class="logo">
-          <p class="title">Фотосалон Фуджи</p>
+          <a class="title" href="index.html">Фотосалон Фуджи</a>
           <p>Брянск, Центральный дом быта, 2 этаж</p>
         </div>
       </div>
@@ -101,15 +107,15 @@
         <div class="block-content">
           <h1 class="block-content-title">Фото на документы</h1>
           <div class="photo-for-documents-text">
-            <p class="photo-for-documents-text-p">
-              Где сфотографироваться на документы в Брянске качественно и быстро? Конечно же в фотосалоне Фуджи! Здесь вы можете сделать фото на паспорт, загран, медкнижку, приписное, водительское удостоверение, гринкард и т.д.
+            <p class="block-content-text">
+              Где сфотографироваться на документы в Брянске качественно и быстро? Конечно же в фотосалоне Фуджи! Здесь вы можете сделать фото на паспорт, загран, медкнижку, приписное, водительское удостоверение и т.д.
             </p>
-            <p class="photo-for-documents-text-p">
+            <p class="block-content-text">
               Приходить в служебной форме или строгом костюме совсем не обязательно: 
               наши мастера подставят нужную одежду прямо на фото (цена опции - 50 рублей). 
               У нас в базе есть формы для всевозможных организаций и служб, а также классические костюмы.
             </p>
-            <p class="photo-for-documents-text-p">
+            <p class="block-content-text">
               Печатаем фото блоками в зависимости от формата:
             </p>
           </div>
@@ -185,7 +191,7 @@
         </div>
       </section>
       <footer>
-        <p>&copy 1998 - 2022 Брянск</p>
+        <p>&copy 1994 - 2022 Брянск</p>
       </footer>
     </main>
   </body>
