--- a/proyavka-plyonki.html
+++ b/proyavka-plyonki.html
@@ -5,10 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta
       name="description"
-      content="Прихдоите в Фотосалон Фуджи, у нас доступна: проявка плёнки, оцифровка плёнки. Качественно и недорого!"
+      content="Приходите в Фотосалон Фуджи, у нас доступна: проявка плёнки, оцифровка плёнки. Качественно и недорого!"
     />
     <title>Фото на документы в Брянске</title>
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="common-style.css" />
     <link rel="stylesheet" href="/source/proyavka-plyonki/style.css" />
     <!-- Yandex.Metrika counter -->
     <script type="text/javascript">
@@ -54,20 +54,20 @@
       <div class="header-content">
         <nav class="menu">
           <div>
-            <a href="#photo-for-documents">Фото на документы</a>
-            <a href="#polygraphy">Полиграфия</a>
+            <a href="foto-na-dokumenty.html">Фото на документы</a>
+            <a href="poligrafiya.html">Полиграфия</a>
           </div>
           <div>
-            <a href="#print">Печать фото</a>
-            <a href="#accessories">Аксессуары</a>
+            <a href="pechat-foto.html">Печать фото</a>
+            <a href="aksessuary.html">Аксессуары</a>
           </div>
           <div>
-            <a href="#recovery">Восстановление фото</a>
+            <a href="vosstanovlenie-foto.html">Восстановление фото</a>
             <a href="#film-development">Проявка плёнки</a>
           </div>
           <div>
-            <a href="#recovery">Оцифровка видеокассет</a>
-            <a href="#contacts">Контакты</a>
+            <a href="ocifrovka-videokasset.html">Оцифровка</a>
+            <a href="index.html#contacts">Контакты</a>
           </div>
         </nav>
         <img
@@ -78,14 +78,14 @@
         />
         <div class="burger" id="burger">
           <nav class="burger-menu close-burger-menu">
-            <a href="#photo-for-documents">Фото на документы</a>
-            <a href="#polygraphy">Полиграфия</a>
-            <a href="#print">Печать фото</a>
+            <a href="foto-na-dokumenty.html">Фото на документы</a>
+            <a href="poligrafiya.html">Полиграфия</a>
+            <a href="pechat-foto.html">Печать фото</a>
             <a href="#film-development">Проявка плёнки</a>
-            <a href="#accessories">Аксессуары</a>
-            <a href="#recovery">Восстановление фото</a>
-            <a href="#recovery">Оцифровка</a>
-            <a href="#contacts">Контакты</a>
+            <a href="aksessuary.html">Аксессуары</a>
+            <a href="vosstanovlenie-foto.html">Восстановление фото</a>
+            <a href="ocifrovka-videokasset.html">Оцифровка</a>
+            <a href="index.html#contacts">Контакты</a>
           </nav>
           <img
             class="close-burger-menu burger-cross"
@@ -93,8 +93,14 @@
             alt="фото в брянске"
           />
         </div>
+        <div class="schedule">
+          <p>пн - пт: 09:00 - 19:00</p>
+          <p>сб: 10:00 - 18:00</p>
+          <p>вс: 12:00 - 18:00</p>
+        </div>
+        <a class="phone" href="tel:+74832663998">+7 (4832) 66-39-98</a>
         <div class="logo">
-          <p class="title">Фотосалон Фуджи</p>
+          <a class="title" href="index.html">Фотосалон Фуджи</a>
           <p>Брянск, Центральный дом быта, 2 этаж</p>
         </div>
       </div>
@@ -111,27 +117,29 @@
                 alt="мокрая печать фотографий"
               />
               <div class="film-development-card-text">
-                <p>Одна кассета - 260 руб</p>
+                <p>Проявка кассеты - 260 руб</p>
               </div>
             </div>
-            <div class="film-development-text">
-                <p class="film-development-text-p">
-                    В нашем фотосалоне вы можете проявить и оцифровать фотоплёну
-                    различного типа: узкие (135мм), широкие (120мм/220мм), листовые пленки
-                    9x12, 13x18, 18x24 и т.д. Мы проявляем в специальной фотолаборатории с
-                    помощью японского обородувания компании <span>Fujifilm</span>.
-                  </p>
-                  <p class="film-development-text-p">
-                    Для уточнения информации звоните по телефону +7 (4832) 66-39-98
-                    или пишите на почту fuji32@bk.ru
-                  </p>
+            <div>
+              <p class="film-development-text-p">
+                В нашем фотосалоне вы можете проявить и оцифровать фотоплёну
+                различного типа: узкие (135мм), широкие (120мм/220мм), листовые
+                пленки 9x12, 13x18, 18x24 и т.д. Мы проявляем в специальной
+                фотолаборатории с помощью японского обородувания компании
+                <span>Fujifilm</span>.
+              </p>
+              <p class="film-development-text-p">
+                Для уточнения информации звоните по телефону
+                <a href="tel:+74832663998" class="mail"> +7 (4832) 66-39-98</a>
+                или пишите на почту
+                <a href="mailto:fuji32@bk.ru" class="mail"> fuji32@bk.ru</a>
+              </p>
             </div>
-            
           </div>
         </div>
       </section>
       <footer>
-        <p>&copy 1998 - 2022 Брянск</p>
+        <p>&copy 1994 - 2022 Брянск</p>
       </footer>
     </main>
   </body>
