--- a/aksessuary.html
+++ b/aksessuary.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="description" content="Приобретайте у нас: рамки для фото, фотоальбомы, штативы, аккумуляторы, батарейки, фотокниги и проч.">
     <title>Фото на документы в Брянске</title>
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="common-style.css" />
     <link rel="stylesheet" href="/source/aksessuary/style.css" />
     <!-- Yandex.Metrika counter -->
     <script type="text/javascript">
@@ -48,59 +48,65 @@
 
   <body>
     <header id="header">
-      <div class="header-content">
-        <nav class="menu">
-          <div>
-            <a href="#photo-for-documents">Фото на документы</a>
-            <a href="#polygraphy">Полиграфия</a>
-          </div>
-          <div>
-            <a href="#print">Печать фото</a>
-            <a href="#accessories">Аксессуары</a>
-          </div>
-          <div>
-            <a href="#recovery">Восстановление фото</a>
-            <a href="#contacts">Проявка плёнки</a>
-          </div>
-          <div>
-            <a href="#recovery">Оцифровка видеокассет</a>
-            <a href="#contacts">Контакты</a>
-          </div>
-        </nav>
-        <img
-          class="burger-img"
-          id="burger-img"
-          src="source/img/header/burger.svg"
-          alt="меню фотоуслуг"
-        />
-        <div class="burger" id="burger">
-          <nav class="burger-menu close-burger-menu">
-            <a href="#photo-for-documents">Фото на документы</a>
-            <a href="#polygraphy">Полиграфия</a>
-            <a href="#print">Печать фото</a>
-            <a href="#print">Проявка плёнки</a>
-            <a href="#accessories">Аксессуары</a>
-            <a href="#recovery">Восстановление фото</a>
-            <a href="#recovery">Оцифровка</a>
-            <a href="#contacts">Контакты</a>
+        <div class="header-content">
+          <nav class="menu">
+            <div>
+              <a href="foto-na-dokumenty.html">Фото на документы</a>
+              <a href="poligrafiya.html">Полиграфия</a>
+            </div>
+            <div>
+              <a href="pechat-foto.html">Печать фото</a>
+              <a href="#accessories">Аксессуары</a>
+            </div>
+            <div>
+              <a href="vosstanovlenie-foto.html">Восстановление фото</a>
+              <a href="proyavka-plyonki.html">Проявка плёнки</a>
+            </div>
+            <div>
+              <a href="ocifrovka-videokasset.html">Оцифровка</a>
+              <a href="index.html#contacts">Контакты</a>
+            </div>
           </nav>
           <img
-            class="close-burger-menu burger-cross"
-            src="source/img/header/cross.svg"
-            alt="фото в брянске"
+            class="burger-img"
+            id="burger-img"
+            src="source/img/header/burger.svg"
+            alt="меню фотоуслуг"
           />
+          <div class="burger" id="burger">
+            <nav class="burger-menu close-burger-menu">
+              <a href="foto-na-dokumenty.html">Фото на документы</a>
+              <a href="poligrafiya.html">Полиграфия</a>
+              <a href="pechat-foto.html">Печать фото</a>
+              <a href="proyavka-plyonki.html">Проявка плёнки</a>
+              <a href="#accessories">Аксессуары</a>
+              <a href="vosstanovlenie-foto.html">Восстановление фото</a>
+              <a href="ocifrovka-videokasset.html">Оцифровка</a>
+              <a href="index.html#contacts">Контакты</a>
+            </nav>
+            <img
+              class="close-burger-menu burger-cross"
+              src="source/img/header/cross.svg"
+              alt="фото в брянске"
+            />
+          </div>
+          <div class="schedule">
+            <p>пн - пт: 09:00 - 19:00</p>
+            <p>сб: 10:00 - 18:00</p>
+            <p>вс: 12:00 - 18:00</p>
+          </div>
+          <a class="phone" href="tel:+74832663998">+7 (4832) 66-39-98</a>
+          <div class="logo">
+            <a class="title" href="index.html">Фотосалон Фуджи</a>
+            <p>Брянск, Центральный дом быта, 2 этаж</p>
+          </div>
         </div>
-        <div class="logo">
-          <p class="title">Фотосалон Фуджи</p>
-          <p>Брянск, Центральный дом быта, 2 этаж</p>
-        </div>
-      </div>
-    </header>
+      </header>
     <main class="close-burger-menu">
         <section class="block accessories" id="accessories">
             <div class="block-content">
               <h3 class="block-content-title">Аксессуары</h3>
-              <p class="accessories-text">
+              <p class="block-content-text">
                  Обращайтесь к нам за любыми товарами в сфере фото! Купить штатив, подобрать фоторамку,
                 приобрести батарейки или аккумуляторы, выбрать альбом или фотокнигу - всё это можно осуществить у нас!
               </p>
@@ -133,7 +139,7 @@
             </div>
           </section>
       <footer>
-        <p>&copy 1998 - 2022 Брянск</p>
+        <p>&copy 1994 - 2022 Брянск</p>
       </footer>
     </main>
   </body>
