--- a/ocifrovka-videokasset.html
+++ b/ocifrovka-videokasset.html
@@ -8,7 +8,7 @@
       content="Приходите к нам, если нужна оцифровка видеокассет, оцифровка киноплёнки! Качественно и недорого!"
     />
     <title>Фото на документы в Брянске</title>
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="common-style.css" />
     <link rel="stylesheet" href="/source/ocifrovka-videokasset/style.css" />
     <!-- Yandex.Metrika counter -->
     <script type="text/javascript">
@@ -54,20 +54,20 @@
       <div class="header-content">
         <nav class="menu">
           <div>
-            <a href="#photo-for-documents">Фото на документы</a>
-            <a href="#polygraphy">Полиграфия</a>
+            <a href="foto-na-dokumenty.html">Фото на документы</a>
+            <a href="poligrafiya.html">Полиграфия</a>
           </div>
           <div>
-            <a href="#print">Печать фото</a>
-            <a href="#accessories">Аксессуары</a>
+            <a href="pechat-foto.html">Печать фото</a>
+            <a href="aksessuary.html">Аксессуары</a>
           </div>
           <div>
-            <a href="#recovery">Восстановление фото</a>
-            <a href="#contacts">Проявка плёнки</a>
+            <a href="vosstanovlenie-foto.html">Восстановление фото</a>
+            <a href="proyavka-plyonki.html">Проявка плёнки</a>
           </div>
           <div>
-            <a href="#digitization">Оцифровка видеокассет</a>
-            <a href="#contacts">Контакты</a>
+            <a href="#digitization">Оцифровка</a>
+            <a href="index.html#contacts">Контакты</a>
           </div>
         </nav>
         <img
@@ -78,14 +78,14 @@
         />
         <div class="burger" id="burger">
           <nav class="burger-menu close-burger-menu">
-            <a href="#photo-for-documents">Фото на документы</a>
-            <a href="#polygraphy">Полиграфия</a>
-            <a href="#print">Печать фото</a>
-            <a href="#print">Проявка плёнки</a>
-            <a href="#accessories">Аксессуары</a>
-            <a href="#recovery">Восстановление фото</a>
-            <a href="#recovery">Оцифровка</a>
-            <a href="#contacts">Контакты</a>
+            <a href="foto-na-dokumenty.html">Фото на документы</a>
+            <a href="poligrafiya.html">Полиграфия</a>
+            <a href="pechat-foto.html">Печать фото</a>
+            <a href="proyavka-plyonki.html">Проявка плёнки</a>
+            <a href="aksessuary.html">Аксессуары</a>
+            <a href="vosstanovlenie-foto.html">Восстановление фото</a>
+            <a href="#digitization">Оцифровка</a>
+            <a href="index.html#contacts">Контакты</a>
           </nav>
           <img
             class="close-burger-menu burger-cross"
@@ -93,8 +93,14 @@
             alt="фото в брянске"
           />
         </div>
+        <div class="schedule">
+          <p>пн - пт: 09:00 - 19:00</p>
+          <p>сб: 10:00 - 18:00</p>
+          <p>вс: 12:00 - 18:00</p>
+        </div>
+        <a class="phone" href="tel:+74832663998">+7 (4832) 66-39-98</a>
         <div class="logo">
-          <p class="title">Фотосалон Фуджи</p>
+          <a class="title" href="index.html">Фотосалон Фуджи</a>
           <p>Брянск, Центральный дом быта, 2 этаж</p>
         </div>
       </div>
@@ -103,13 +109,15 @@
       <section class="block digitization" id="digitization">
         <div class="block-content">
           <h3 class="block-content-title">Оцифровка</h3>
-          <p class="digitization-content-text">
-            Как оцифровать видеокассету? - Обращайтесь к нам! Наши специалисты могут качественно и недорого 
-            оцифровать видеокассету любого типа: VHS, VHS-C, JVS и т.д. На нашем оборудовании
-            мы удалим шумы и восстановим цветовой баланс! 
+          <p class="block-content-text">
+            Как оцифровать видеокассету? - Обращайтесь к нам! Наши специалисты
+            могут качественно и недорого оцифровать видеокассету любого типа:
+            VHS, VHS-C, JVS и т.д. На нашем оборудовании мы удалим шумы и
+            восстановим цветовой баланс!
           </p>
-          <p class="digitization-content-text">
-            Также доступна оцифровка киноплёнки - приносите записи длиной от 10 минут.
+          <p class="block-content-text">
+            Также доступна оцифровка киноплёнки - приносите записи длиной от 10
+            минут.
           </p>
           <div class="block-cards">
             <div class="block-card">
@@ -139,14 +147,17 @@
               </p>
             </div>
           </div>
-          <p class="digitization-content-text">
-            Для уточнения информации звоните по телефону +7 (4832) 66-39-98 или
-            пишите на почту fuji32@bk.ru
+          <p class="block-content-text">
+            Для уточнения информации звоните по телефону
+
+            <a href="tel:+74832663998" class="mail"> +7 (4832) 66-39-98</a>
+            или пишите на почту
+            <a href="mailto:fuji32@bk.ru" class="mail"> fuji32@bk.ru</a>
           </p>
         </div>
       </section>
       <footer>
-        <p>&copy 1998 - 2022 Брянск</p>
+        <p>&copy 1994 - 2022 Брянск</p>
       </footer>
     </main>
   </body>
