--- a/pechat-foto.html
+++ b/pechat-foto.html
@@ -1,12 +1,14 @@
-
 <!DOCTYPE html>
 <html lang="ru">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="description" content="Фотопечать в Брянске: распечатать картинки, цветная печать недорого">
+    <meta
+      name="description"
+      content="Фотопечать в Брянске: распечатать картинки, цветная печать недорого"
+    />
     <title>Фото на документы в Брянске</title>
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="common-style.css" />
     <link rel="stylesheet" href="/source/pechat-foto/style.css" />
     <!-- Yandex.Metrika counter -->
     <script type="text/javascript">
@@ -52,20 +54,20 @@
       <div class="header-content">
         <nav class="menu">
           <div>
-            <a href="#photo-for-documents">Фото на документы</a>
-            <a href="#polygraphy">Полиграфия</a>
+            <a href="foto-na-dokumenty.html">Фото на документы</a>
+            <a href="poligrafiya.html">Полиграфия</a>
           </div>
           <div>
             <a href="#print">Печать фото</a>
-            <a href="#accessories">Аксессуары</a>
+            <a href="aksessuary.html">Аксессуары</a>
           </div>
           <div>
-            <a href="#recovery">Восстановление фото</a>
-            <a href="#contacts">Проявка плёнки</a>
+            <a href="vosstanovlenie-foto.html">Восстановление фото</a>
+            <a href="proyavka-plyonki.html">Проявка плёнки</a>
           </div>
           <div>
-            <a href="#recovery">Оцифровка видеокассет</a>
-            <a href="#contacts">Контакты</a>
+            <a href="ocifrovka-videokasset.html">Оцифровка</a>
+            <a href="index.html#contacts">Контакты</a>
           </div>
         </nav>
         <img
@@ -76,14 +78,14 @@
         />
         <div class="burger" id="burger">
           <nav class="burger-menu close-burger-menu">
-            <a href="#photo-for-documents">Фото на документы</a>
-            <a href="#polygraphy">Полиграфия</a>
+            <a href="foto-na-dokumenty.html">Фото на документы</a>
+            <a href="poligrafiya.html">Полиграфия</a>
             <a href="#print">Печать фото</a>
-            <a href="#print">Проявка плёнки</a>
-            <a href="#accessories">Аксессуары</a>
-            <a href="#recovery">Восстановление фото</a>
-            <a href="#recovery">Оцифровка</a>
-            <a href="#contacts">Контакты</a>
+            <a href="proyavka-plyonki.html">Проявка плёнки</a>
+            <a href="aksessuary.html">Аксессуары</a>
+            <a href="vosstanovlenie-foto.html">Восстановление фото</a>
+            <a href="ocifrovka-videokasset.html">Оцифровка</a>
+            <a href="index.html#contacts">Контакты</a>
           </nav>
           <img
             class="close-burger-menu burger-cross"
@@ -91,8 +93,14 @@
             alt="фото в брянске"
           />
         </div>
+        <div class="schedule">
+          <p>пн - пт: 09:00 - 19:00</p>
+          <p>сб: 10:00 - 18:00</p>
+          <p>вс: 12:00 - 18:00</p>
+        </div>
+        <a class="phone" href="tel:+74832663998">+7 (4832) 66-39-98</a>
         <div class="logo">
-          <p class="title">Фотосалон Фуджи</p>
+          <a class="title" href="index.html">Фотосалон Фуджи</a>
           <p>Брянск, Центральный дом быта, 2 этаж</p>
         </div>
       </div>
@@ -112,17 +120,27 @@
                 <p>Рождение фотографии...</p>
               </div>
             </div>
-            <p class="print-content-bottom-text">
-              Ищите где распечатать фото? Обращайтесь к нам! Мы печатаем 
-              в специальной фотолаборатории с помощью японского
-              обородувания компании <span>Fujifilm</span>. Цветная печать осуществляется
-              путём проявки изображения на специальной фотобумаге. Данная технология обеспечивает 
-              долговечность фотографии и стойкость красок.
-            </p>
-
+            <div>
+              <p class="print-content-bottom-text">
+                Ищите где распечатать фото? Обращайтесь к нам! Мы печатаем в
+                специальной фотолаборатории с помощью японского обородувания
+                компании <span>Fujifilm</span>. Цветная печать осуществляется
+                путём проявки изображения на специальной фотобумаге. Данная
+                технология обеспечивает долговечность фотографии и стойкость
+                красок. <br />
+              </p>
+              <p class="print-content-bottom-text">
+                Оформите по почте
+                <a href="mailto:fuji32@bk.ru" class="contacts-text mail">
+                  fuji32@bk.ru</a
+                >
+                онлайн заказ. Не забудьте указать в электронном письме формат
+                фотографий и телефон для связи.
+              </p>
+            </div>
           </div>
-          <p class="block-content-text">Форматы и цены:</p>
-          <div class="block-cards">
+          <p class="block-content-text print-text">Форматы и цены:</p>
+          <div class="block-cards" id="block-cards">
             <div class="block-card">
               <img
                 class="block-card-img"
@@ -167,7 +185,7 @@
         </div>
       </section>
       <footer>
-        <p>&copy 1998 - 2022 Брянск</p>
+        <p>&copy 1994 - 2022 Брянск</p>
       </footer>
     </main>
   </body>
