--- a/poligrafiya.html
+++ b/poligrafiya.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="description" content="Предлагаем полиграфические услуги: фотокерамика, печатать на различных поверхностях, включая дерево, ткань одежды">
     <title>Фото на документы в Брянске</title>
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="common-style.css" />
     <link rel="stylesheet" href="/source/poligrafiya/style.css" />
     <!-- Yandex.Metrika counter -->
     <script type="text/javascript">
@@ -51,20 +51,20 @@
       <div class="header-content">
         <nav class="menu">
           <div>
-            <a href="#photo-for-documents">Фото на документы</a>
+            <a href="foto-na-dokumenty.html">Фото на документы</a>
             <a href="#polygraphy">Полиграфия</a>
           </div>
           <div>
-            <a href="#print">Печать фото</a>
-            <a href="#accessories">Аксессуары</a>
+            <a href="pechat-foto.html">Печать фото</a>
+            <a href="aksessuary.html">Аксессуары</a>
           </div>
           <div>
-            <a href="#recovery">Восстановление фото</a>
-            <a href="#contacts">Проявка плёнки</a>
+            <a href="vosstanovlenie-foto.html">Восстановление фото</a>
+            <a href="proyavka-plyonki.html">Проявка плёнки</a>
           </div>
           <div>
-            <a href="#recovery">Оцифровка видеокассет</a>
-            <a href="#contacts">Контакты</a>
+            <a href="ocifrovka-videokasset.html">Оцифровка</a>
+            <a href="index.html#contacts">Контакты</a>
           </div>
         </nav>
         <img
@@ -75,14 +75,14 @@
         />
         <div class="burger" id="burger">
           <nav class="burger-menu close-burger-menu">
-            <a href="#photo-for-documents">Фото на документы</a>
+            <a href="foto-na-dokumenty.html">Фото на документы</a>
             <a href="#polygraphy">Полиграфия</a>
-            <a href="#print">Печать фото</a>
-            <a href="#print">Проявка плёнки</a>
-            <a href="#accessories">Аксессуары</a>
-            <a href="#recovery">Восстановление фото</a>
-            <a href="#recovery">Оцифровка</a>
-            <a href="#contacts">Контакты</a>
+            <a href="pechat-foto.html">Печать фото</a>
+            <a href="proyavka-plyonki.html">Проявка плёнки</a>
+            <a href="aksessuary.html">Аксессуары</a>
+            <a href="vosstanovlenie-foto.html">Восстановление фото</a>
+            <a href="ocifrovka-videokasset.html">Оцифровка</a>
+            <a href="index.html#contacts">Контакты</a>
           </nav>
           <img
             class="close-burger-menu burger-cross"
@@ -90,8 +90,14 @@
             alt="фото в брянске"
           />
         </div>
+        <div class="schedule">
+          <p>пн - пт: 09:00 - 19:00</p>
+          <p>сб: 10:00 - 18:00</p>
+          <p>вс: 12:00 - 18:00</p>
+        </div>
+        <a class="phone" href="tel:+74832663998">+7 (4832) 66-39-98</a>
         <div class="logo">
-          <p class="title">Фотосалон Фуджи</p>
+          <a class="title" href="index.html">Фотосалон Фуджи</a>
           <p>Брянск, Центральный дом быта, 2 этаж</p>
         </div>
       </div>
@@ -100,7 +106,7 @@
         <section class="block polygraphy" id="polygraphy">
             <div class="block-content">
               <h3 class="block-content-title">Полиграфия</h3>
-              <p class="polygraphy-content-text">
+              <p class="block-content-text">
                   Если вам нужна полиграфическая продукция, смело обращайтесь в Фотосалон Фуджи!
                   По вашему заказу сделаем печать фото на кружке, принт на футболку,
                   распечатаем изображение на дереве, а также нанесём ритуальное фото на керамику.  
@@ -134,7 +140,7 @@
             </div>
           </section>
       <footer>
-        <p>&copy 1998 - 2022 Брянск</p>
+        <p>&copy 1994 - 2022 Брянск</p>
       </footer>
     </main>
   </body>
