--- a/vosstanovlenie-foto.html
+++ b/vosstanovlenie-foto.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="description" content="Восстановление фото, реставрация и разукрашивание старых фотографий">
     <title>Фото на документы в Брянске</title>
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="common-style.css" />
     <link rel="stylesheet" href="/source/vosstanovlenie-foto/style.css" />
     <!-- Yandex.Metrika counter -->
     <script type="text/javascript">
@@ -45,26 +45,25 @@
     ></noscript>
     <!-- /Yandex.Metrika counter -->
   </head>
-
   <body>
     <header id="header">
       <div class="header-content">
         <nav class="menu">
           <div>
-            <a href="#photo-for-documents">Фото на документы</a>
-            <a href="#polygraphy">Полиграфия</a>
+            <a href="foto-na-dokumenty.html">Фото на документы</a>
+            <a href="poligrafiya.html">Полиграфия</a>
           </div>
           <div>
-            <a href="#print">Печать фото</a>
-            <a href="#accessories">Аксессуары</a>
+            <a href="pechat-foto.html">Печать фото</a>
+            <a href="aksessuary.html">Аксессуары</a>
           </div>
           <div>
             <a href="#recovery">Восстановление фото</a>
-            <a href="#contacts">Проявка плёнки</a>
+            <a href="proyavka-plyonki.html">Проявка плёнки</a>
           </div>
           <div>
-            <a href="#recovery">Оцифровка видеокассет</a>
-            <a href="#contacts">Контакты</a>
+            <a href="ocifrovka-videokasset.html">Оцифровка</a>
+            <a href="index.html#contacts">Контакты</a>
           </div>
         </nav>
         <img
@@ -75,14 +74,14 @@
         />
         <div class="burger" id="burger">
           <nav class="burger-menu close-burger-menu">
-            <a href="#photo-for-documents">Фото на документы</a>
-            <a href="#polygraphy">Полиграфия</a>
-            <a href="#print">Печать фото</a>
-            <a href="#print">Проявка плёнки</a>
-            <a href="#accessories">Аксессуары</a>
+            <a href="foto-na-dokumenty.html">Фото на документы</a>
+            <a href="poligrafiya.html">Полиграфия</a>
+            <a href="pechat-foto.html">Печать фото</a>
+            <a href="proyavka-plyonki.html">Проявка плёнки</a>
+            <a href="aksessuary.html">Аксессуары</a>
             <a href="#recovery">Восстановление фото</a>
-            <a href="#recovery">Оцифровка</a>
-            <a href="#contacts">Контакты</a>
+            <a href="ocifrovka-videokasset.html">Оцифровка</a>
+            <a href="index.html#contacts">Контакты</a>
           </nav>
           <img
             class="close-burger-menu burger-cross"
@@ -90,8 +89,14 @@
             alt="фото в брянске"
           />
         </div>
+        <div class="schedule">
+          <p>пн - пт: 09:00 - 19:00</p>
+          <p>сб: 10:00 - 18:00</p>
+          <p>вс: 12:00 - 18:00</p>
+        </div>
+        <a class="phone" href="tel:+74832663998">+7 (4832) 66-39-98</a>
         <div class="logo">
-          <p class="title">Фотосалон Фуджи</p>
+          <a class="title" href="index.html">Фотосалон Фуджи</a>
           <p>Брянск, Центральный дом быта, 2 этаж</p>
         </div>
       </div>
@@ -100,9 +105,9 @@
       <section class="block recovery" id="recovery">
         <div class="block-content">
           <h1 class="block-content-title">Восстановление фото</h1>
-          <p class="recovery-content-text">
+          <p class="block-content-text">
             Как восстановить старые фотографии, когда время отнеслось к ним безжалостно?
-            - Срочно нести к нам! Наши профи смогут качественно отреставрировать фото, вернуть им цвет и исправить дефекты. 
+            - Срочно нести к нам! Наши профи смогут качественно отреставрировать фото, вернуть былой цвет и исправить дефекты. 
           </p>
           <div class="block-cards">
             <div class="block-card recovery-card">
@@ -130,7 +135,7 @@
         </div>
       </section>
       <footer>
-        <p>&copy 1998 - 2022 Брянск</p>
+        <p>&copy 1994 - 2022 Брянск</p>
       </footer>
     </main>
   </body>
